build: Add vscode recommended configurations

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -11,6 +11,10 @@
         "earthly.earthfile-syntax-highlighting",
         "redhat.vscode-yaml",
         "remcohaszing.schemastore",
-        "tamasfe.even-better-toml"
+        "tamasfe.even-better-toml",
+        "rust-lang.rust-analyzer",
+        "JScearcy.rust-doc-viewer",
+        "serayuzgur.crates",
+        "panicbit.cargo",
     ]
 }
