--- a/.vscode/launch.recommended.json
+++ b/.vscode/launch.recommended.json
@@ -1,31 +1,44 @@
 {
-  "version": "0.2.0",
-  "configurations": [
-    {
-      "name": "Hermes Dashboard [DEV][Debug]",
-      "cwd": "dashboard",
-      "request": "launch",
-      "type": "dart",
-      "program": "lib/main_development.dart",
-      "args": ["--flavor", "development"]
-    },
-    {
-      "name": "Hermes Dashboard [DEV][Profile]",
-      "cwd": "dashboard",
-      "request": "launch",
-      "type": "dart",
-      "flutterMode": "profile",
-      "program": "lib/main_development.dart",
-      "args": ["--flavor", "development"]
-    },
-    {
-      "name": "Hermes Dashboard [DEV][Release]",
-      "cwd": "dashboard",
-      "request": "launch",
-      "type": "dart",
-      "flutterMode": "release",
-      "program": "lib/main_development.dart",
-      "args": ["--flavor", "development"]
-    }
-  ]
+    // Recommended `launch.json` configuration
+    // Use IntelliSense to learn about possible attributes.
+    // Hover to view descriptions of existing attributes.
+    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+    "version": "0.2.0",
+    "configurations": [
+        {
+            "name": "Hermes Dashboard [DEV][Debug]",
+            "cwd": "dashboard",
+            "request": "launch",
+            "type": "dart",
+            "program": "lib/main_development.dart",
+            "args": [
+                "--flavor",
+                "development"
+            ]
+        },
+        {
+            "name": "Hermes Dashboard [DEV][Profile]",
+            "cwd": "dashboard",
+            "request": "launch",
+            "type": "dart",
+            "flutterMode": "profile",
+            "program": "lib/main_development.dart",
+            "args": [
+                "--flavor",
+                "development"
+            ]
+        },
+        {
+            "name": "Hermes Dashboard [DEV][Release]",
+            "cwd": "dashboard",
+            "request": "launch",
+            "type": "dart",
+            "flutterMode": "release",
+            "program": "lib/main_development.dart",
+            "args": [
+                "--flavor",
+                "development"
+            ]
+        }
+    ]
 }
