docs(mdlint): Ignore hermes target directory

--- a/.markdownlint-cli2.jsonc
+++ b/.markdownlint-cli2.jsonc
@@ -8,7 +8,8 @@
     "**/*.md"
   ],
   "ignores": [
-    ".config/dictionaries/**"
+    ".config/dictionaries/**",
+    "hermes/target/**"
   ],
   // Set standard config options in `/.markdownlint.jsonc`
   "config": {
