ci: Add github CI workflows

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,5 +1,5 @@
 /dashboard/ @minikin
 
-/hermes/ @stevenj @Mr-Leshiy @FelipeRosa @cong-or @saibatizoku
+/hermes/ @stevenj @Mr-Leshiy @FelipeRosa @cong-or @saibatizoku @minikin
 
 .md  @stevenj @minikin
