build(hermes): Add rust CI targets to hermes

--- a/hermes/Cargo.toml
+++ b/hermes/Cargo.toml
@@ -1,8 +1,13 @@
-[package]
-name = "hermes"
-version = "0.1.0"
+[workspace]
+resolver = "2"
+members = [
+    "bin",
+    # "crates/<a crate>",
+]
+
+[workspace.package]
 edition = "2021"
+version = "0.0.1"
+authors = []
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
+[workspace.dependencies]
