--- a/.vscode/settings.recommended.json
+++ b/.vscode/settings.recommended.json
@@ -53,7 +53,7 @@
     "Earthfile": "earthfile"
   },
   "rust-analyzer.linkedProjects": [
-    "./catalyst-gateway/Cargo.toml"
+    "./hermes/bin/Cargo.toml"
   ],
   "rust-analyzer.check.overrideCommand": [
     "bash",
