docs(docs): Fix spelling issues

--- a/.github/workflows/flitter-mobile-integration-test.yml
+++ b/.github/workflows/flitter-mobile-integration-test.yml
@@ -1,5 +1,7 @@
 name: 🧪 Flutter iOS and Android Integration Tests
 
+# cspell: words gcloud, subosito bluefireteam
+
 permissions:
   contents: read
   id-token: write
