--- a/hermes/crates/cardano-chain-follower/Cargo.toml
+++ b/hermes/crates/cardano-chain-follower/Cargo.toml
@@ -9,3 +9,8 @@ repository.workspace = true
 license.workspace = true
 
 [dependencies]
+pallas.workspace = true
+
+[dev-dependencies]
+hex = "0.4.3"
+tokio = { version = "1.34.0", default-features = false, features = ["macros", "rt", "net", "rt-multi-thread"] }
