feat: wasi-component-adapter

--- a/hermes/Cargo.toml
+++ b/hermes/Cargo.toml
@@ -3,6 +3,7 @@ resolver = "2"
 members = [
     "bin",
     "crates/cardano-chain-follower",
+    "crates/wasi-component-adapter",
 ]
 
 [workspace.package]
