--- a/hermes/crates/wasi-component-adapter/Cargo.toml
+++ b/hermes/crates/wasi-component-adapter/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "wasi-preview1-component-adapter"
+name = "wasi-component-adapter"
 version.workspace = true
 authors.workspace = true
 edition.workspace = true
@@ -10,12 +10,12 @@ workspace = true
 
 [dependencies]
 wasi = { version = "0.11.0", default-features = false }
-wit-bindgen = { workspace = true, default-features = false, features = ["macros"] }
-byte-array-literals = { workspace = true }
+wit-bindgen = { version = "0.16.0", default-features = false, features = ["macros"] }
+byte-array-literals = { path = "./byte-array-literals" }
 
 [build-dependencies]
-wasm-encoder = { workspace = true }
-object = { workspace = true, default-features = false, features = ["archive"] }
+wasm-encoder = { version = "0.38.1" }
+object = { version = "0.32.1", default-features = false, features = ["archive"] }
 
 [lib]
 test = false
