--- a/hermes/crates/cardano-chain-follower/Cargo.toml
+++ b/hermes/crates/cardano-chain-follower/Cargo.toml
@@ -10,7 +10,10 @@ license.workspace = true
 
 [dependencies]
 pallas.workspace = true
+thiserror = "1.0.50"
+tokio = { version = "1.34.0", default-features = false, features = ["macros", "rt", "net", "rt-multi-thread"] }
+tracing = "0.1.40"
 
 [dev-dependencies]
 hex = "0.4.3"
-tokio = { version = "1.34.0", default-features = false, features = ["macros", "rt", "net", "rt-multi-thread"] }
+tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
