chore: Change read_block point type

--- a/hermes/.cargo/config.toml
+++ b/hermes/.cargo/config.toml
@@ -34,8 +34,8 @@ rustflags = [
 rustflags = [
     "-D",
     "warnings",
-    # "-D",
-    # "missing_docs",
+    "-D",
+    "missing_docs",
     "-D",
     "let_underscore_drop",
     "-D",
