fix: add per-package-target feature enabled

--- a/hermes/crates/wasi-component-adapter/Cargo.toml
+++ b/hermes/crates/wasi-component-adapter/Cargo.toml
@@ -1,5 +1,8 @@
+cargo-features = ["per-package-target"]
+
 [package]
 name = "wasi-component-adapter"
+forced-target = "wasm32-unknown-unknown"
 version.workspace = true
 authors.workspace = true
 edition.workspace = true
