--- a/hermes/wasm/rust-toolchain.toml
+++ b/hermes/wasm/rust-toolchain.toml
@@ -2,4 +2,4 @@
 channel = "1.73.0"
 profile = "default"
 components = []
-targets = ["x86_64-unknown-linux-musl"]
+targets = ["wasm32-unknown-unknown"]
