fix: update cargo as original

--- a/hermes/wasm/wasi-component-adapter/Cargo.toml
+++ b/hermes/wasm/wasi-component-adapter/Cargo.toml
@@ -1,18 +1,21 @@
 [package]
-name = "wasi-component-adapter"
+name = "wasi-preview1-component-adapter"
 version.workspace = true
 authors.workspace = true
 edition.workspace = true
 publish = false
 
+[lints]
+workspace = true
+
 [dependencies]
 wasi = { version = "0.11.0", default-features = false }
-wit-bindgen = { version = "0.16.0", default-features = false, features = ["macros"] }
-byte-array-literals = { path = "./byte-array-literals" }
+wit-bindgen = { workspace = true, default-features = false, features = ["macros"] }
+byte-array-literals = { workspace = true }
 
 [build-dependencies]
-wasm-encoder = { version = "0.38.1" }
-object = { version = "0.32.1", default-features = false, features = ["archive"] }
+wasm-encoder = { workspace = true }
+object = { workspace = true, default-features = false, features = ["archive"] }
 
 [lib]
 test = false
