--- a/hermes/wasm/Cargo.toml
+++ b/hermes/wasm/Cargo.toml
@@ -16,10 +16,11 @@ repository = "https://github.com/input-output-hk/hermes"
 license = "MIT OR Apache-2.0"
 
 [workspace.dependencies]
-wasi = "0.11.0"
+
+# for `wasi-preview1-component-adapter`
 wit-bindgen = "0.16.0"
 byte-array-literals = { path = "./wasi-component-adapter/byte-array-literals" }
-
-[workspace.build-dependencies]
 wasm-encoder = "0.38.1"
 object = "0.32.1"
+
+[workspace.lints]
