ci: add ignore to markdownlint to omit all directories inside

--- a/.markdownlint-cli2.jsonc
+++ b/.markdownlint-cli2.jsonc
@@ -9,7 +9,8 @@
   ],
   "ignores": [
     ".config/dictionaries/**",
-    "hermes/target/**"
+    "hermes/target/**",
+    "hermes/wasm/**/"
   ],
   // Set standard config options in `/.markdownlint.jsonc`
   "config": {
