fix: correct exclude

--- a/.markdownlint-cli2.jsonc
+++ b/.markdownlint-cli2.jsonc
@@ -9,7 +9,7 @@
   ],
   "ignores": [
     ".config/dictionaries/**",
-    "hermes/target/**",
+    "hermes/**/target/**",
     "hermes/wasm/*/**/**"
   ],
   // Set standard config options in `/.markdownlint.jsonc`
