fix: glob paths in markdownlint and cspell

--- a/.markdownlint-cli2.jsonc
+++ b/.markdownlint-cli2.jsonc
@@ -9,8 +9,8 @@
   ],
   "ignores": [
     ".config/dictionaries/**",
-    "hermes/**/target/**",
-    "hermes/wasm/*/**/**"
+    "**/target/**",
+    "hermes/wasm/*/**"
   ],
   // Set standard config options in `/.markdownlint.jsonc`
   "config": {
