--- a/hermes/wasm/Cargo.toml
+++ b/hermes/wasm/Cargo.toml
@@ -4,6 +4,7 @@
 resolver = "2"
 members = [
     "crates/wasi-component-adapter",
+    "crates/wasi-component-adapter/verify",
 ]
 
 [workspace.package]
@@ -25,5 +26,10 @@ wit-bindgen = "0.16.0"
 byte-array-literals = { path = "./crates/wasi-component-adapter/byte-array-literals", version = "0.0.1" }
 wasm-encoder = "0.38.1"
 object = "0.32.1"
+
+# for `wasi-preview1-component-adapter/verify`
+wasmparser = "0.118.1"
+wat = "1.0.82"
+anyhow = "1.0.76"
 
 [workspace.lints]
