fix: cspell word in cargo

--- a/hermes/wasm/Cargo.toml
+++ b/hermes/wasm/Cargo.toml
@@ -1,4 +1,4 @@
-#cspell: words Apisit Ritreungroj wasi bindgen
+#cspell: words Apisit Ritreungroj wasmparser wasi bindgen
 
 [workspace]
 resolver = "2"
