fix(hermes): standard rust checks now pass for the wasm-component-adapter

--- a/hermes/.cargo/config.toml
+++ b/hermes/.cargo/config.toml
@@ -28,6 +28,8 @@ rustflags = [
     "-C", "target-feature=-crt-static"
 ]
 
+[target.wasm32-unknown-unknown]
+rustflags = ["--cap-lints", "warn"]
 
 [build]
 
