--- a/hermes/wasm/crates/wasi-component-adapter/byte-array-literals/Cargo.toml
+++ b/hermes/wasm/crates/wasi-component-adapter/byte-array-literals/Cargo.toml
@@ -1,5 +1,6 @@
 [package]
 name = "byte-array-literals"
+license = "Apache-2.0 WITH LLVM-exception"
 version.workspace = true
 authors.workspace = true
 edition.workspace = true
