--- a/deny.toml
+++ b/deny.toml
@@ -98,8 +98,6 @@ ignore = [
 [licenses]
 # The lint level for crates which do not have a detectable license
 unlicensed = "deny"
-# Don't warn if a listed license isn't found
-unused-allowed-license="allow"
 # List of explicitly allowed licenses
 # See https://spdx.org/licenses/ for list of possible licenses
 # [possible values: any SPDX 3.11 short identifier (+ optional exception)].
@@ -108,8 +106,7 @@ allow = [
     "Apache-2.0",
     "Unicode-DFS-2016",
     "BSD-3-Clause",
-    "BlueOak-1.0.0",
-    "Apache-2.0 WITH LLVM-exception"
+    "BlueOak-1.0.0"
 ]
 # List of explicitly disallowed licenses
 # See https://spdx.org/licenses/ for list of possible licenses
