--- a/hermes/wasm/crates/wasi-component-adapter/Cargo.toml
+++ b/hermes/wasm/crates/wasi-component-adapter/Cargo.toml
@@ -1,5 +1,6 @@
 [package]
 name = "wasi-preview1-component-adapter"
+license = "Apache-2.0 WITH LLVM-exception"
 version.workspace = true
 authors.workspace = true
 edition.workspace = true
