--- a/hermes/wasm/crates/wasi-component-adapter/Cargo.toml
+++ b/hermes/wasm/crates/wasi-component-adapter/Cargo.toml
@@ -5,17 +5,14 @@ authors.workspace = true
 edition.workspace = true
 publish = false
 
-[lints]
-workspace = true
-
 [dependencies]
-wasi = { version = "0.11.0", default-features = false }
-wit-bindgen = { workspace = true, default-features = false, features = ["macros"] }
+wasi = { workspace = true }
+wit-bindgen = { workspace = true, features = ["macros"] }
 byte-array-literals = { workspace = true }
 
 [build-dependencies]
 wasm-encoder = { workspace = true }
-object = { workspace = true, default-features = false, features = ["archive"] }
+object = { workspace = true, features = ["archive"] }
 
 [lib]
 test = false
