--- a/hermes/wasm/.cargo/config.toml
+++ b/hermes/wasm/.cargo/config.toml
@@ -125,8 +125,8 @@ fmtchk = "fmt -- --check -v --color=always"
 fmtfix = "fmt -- -v"
 
 [term]
-quiet = false          # whether cargo output is quiet
+quiet = false           # whether cargo output is quiet
 verbose = false         # whether cargo provides verbose output
-color = 'always'       # whether cargo colorizes output use `CARGO_TERM_COLOR="off"` to disable.
+color = 'auto'          # whether cargo colorizes output use `CARGO_TERM_COLOR="off"` to disable.
 progress.when = 'never' # whether cargo shows progress bar
-progress.width = 80    # width of progress bar
+progress.width = 80     # width of progress bar
