--- a/hermes/wasm/crates/wasi-component-adapter/Cargo.toml
+++ b/hermes/wasm/crates/wasi-component-adapter/Cargo.toml
@@ -3,6 +3,8 @@ name = "wasi-preview1-component-adapter"
 version.workspace = true
 authors.workspace = true
 edition.workspace = true
+# inherited license from https://github.com/bytecodealliance/wasmtime
+license = "Apache-2.0 WITH LLVM-exception"
 publish = false
 
 [dependencies]
