--- a/hermes/wasm/crates/wasi-component-adapter/byte-array-literals/Cargo.toml
+++ b/hermes/wasm/crates/wasi-component-adapter/byte-array-literals/Cargo.toml
@@ -3,6 +3,8 @@ name = "byte-array-literals"
 version.workspace = true
 authors.workspace = true
 edition.workspace = true
+# inherited license from https://github.com/bytecodealliance/wasmtime
+license = "Apache-2.0 WITH LLVM-exception"
 publish = false
 
 [lib]
