--- a/hermes/wasm/.cargo/config.toml
+++ b/hermes/wasm/.cargo/config.toml
@@ -115,7 +115,7 @@ lintfix = "clippy --all-targets --fix --allow-dirty -- -D warnings -D clippy::pe
 lintrestrict = "clippy -- -D warnings -D clippy::pedantic -D clippy::restriction -D clippy::missing_docs_in_private_items"
 lint-vscode = "clippy --message-format=json-diagnostic-rendered-ansi --all-targets -- -D warnings -D clippy::pedantic -D clippy::unwrap_used -D clippy::expect_used -D clippy::exit -D clippy::get_unwrap -D clippy::index_refutable_slice -D clippy::indexing_slicing -D clippy::match_on_vec_items -D clippy::match_wild_err_arm -D clippy::missing_panics_doc -D clippy::panic -D clippy::string_slice -D clippy::unchecked_duration_subtraction -D clippy::unreachable -D clippy::missing_docs_in_private_items"
 
-docs = "doc -r --all-features --no-deps --bins --document-private-items --examples"
+docs = "doc -r --no-deps --bins --lib --document-private-items --examples"
 # nightly docs build broken... when they are'nt we can enable these docs... --unit-graph --timings=html,json -Z unstable-options"
 testunit = "nextest run --release --bins --lib -P ci"
 testdocs = "test --doc --release"
