--- a/hermes/wasm/.cargo/config.toml
+++ b/hermes/wasm/.cargo/config.toml
@@ -1,7 +1,7 @@
 # Use MOLD linker where possible, but ONLY in CI applicable targets.
 # cspell: words rustflags armv gnueabihf msvc nextest idents rustdocflags
 # cspell: words rustdoc lintfix lintrestrict testfast testdocs codegen testci testunit
-# cspell: words fmtchk fmtfix
+# cspell: words fmtchk fmtfix testcov
 
 # Configure how Docker container targets build.
 
@@ -112,12 +112,12 @@ codegen-units = 16
 [alias]
 lint = "clippy --all-targets -- -D warnings -D clippy::pedantic -D clippy::unwrap_used -D clippy::expect_used -D clippy::exit -D clippy::get_unwrap -D clippy::index_refutable_slice -D clippy::indexing_slicing -D clippy::match_on_vec_items -D clippy::match_wild_err_arm -D clippy::missing_panics_doc -D clippy::panic -D clippy::string_slice -D clippy::unchecked_duration_subtraction -D clippy::unreachable -D clippy::missing_docs_in_private_items"
 lintfix = "clippy --all-targets --fix --allow-dirty -- -D warnings -D clippy::pedantic -D clippy::unwrap_used -D clippy::expect_used -D clippy::exit -D clippy::get_unwrap -D clippy::index_refutable_slice -D clippy::indexing_slicing -D clippy::match_on_vec_items -D clippy::match_wild_err_arm -D clippy::missing_panics_doc -D clippy::panic -D clippy::string_slice -D clippy::unchecked_duration_subtraction -D clippy::unreachable -D clippy::missing_docs_in_private_items"
-lintrestrict = "clippy -- -D warnings -D clippy::pedantic -D clippy::restriction -D clippy::missing_docs_in_private_items"
 lint-vscode = "clippy --message-format=json-diagnostic-rendered-ansi --all-targets -- -D warnings -D clippy::pedantic -D clippy::unwrap_used -D clippy::expect_used -D clippy::exit -D clippy::get_unwrap -D clippy::index_refutable_slice -D clippy::indexing_slicing -D clippy::match_on_vec_items -D clippy::match_wild_err_arm -D clippy::missing_panics_doc -D clippy::panic -D clippy::string_slice -D clippy::unchecked_duration_subtraction -D clippy::unreachable -D clippy::missing_docs_in_private_items"
 
-docs = "doc -r --no-deps --bins --lib --document-private-items --examples"
+docs = "doc --release --no-deps --document-private-items --bins --lib --examples"
 # nightly docs build broken... when they are'nt we can enable these docs... --unit-graph --timings=html,json -Z unstable-options"
 testunit = "nextest run --release --bins --lib -P ci"
+testcov = "llvm-cov nextest --release --bins --lib -P ci"
 testdocs = "test --doc --release"
 
 # Rust formatting, MUST be run with +nightly
