--- a/hermes/Cargo.toml
+++ b/hermes/Cargo.toml
@@ -17,4 +17,4 @@ repository = "https://github.com/input-output-hk/hermes"
 license = "MIT OR Apache-2.0"
 
 [workspace.dependencies]
-pallas = "0.21.0"
+pallas = { version = "0.21.0", git = "https://github.com/input-output-hk/catalyst-pallas.git", branch = "feat/hardano-read-blocks-iter-send" }
