--- a/hermes/.config/nextest.toml
+++ b/hermes/.config/nextest.toml
@@ -35,7 +35,7 @@ path = "junit.xml"
 # The name of the top-level "report" element in JUnit report. If aggregating
 # reports across different test runs, it may be useful to provide separate names
 # for each report.
-report-name = "cat-gateway"
+report-name = "nextest"
 
 # Whether standard output and standard error for passing tests should be stored in the JUnit report.
 # Output is stored in the <system-out> and <system-err> elements of the <testcase> element.
