--- a/hermes/wasm/crates/byte-array-literals/Cargo.toml
+++ b/hermes/wasm/crates/byte-array-literals/Cargo.toml
@@ -7,6 +7,9 @@ edition.workspace = true
 license = "Apache-2.0 WITH LLVM-exception"
 publish = false
 
+[lints]
+workspace = true
+
 [lib]
 proc-macro = true
 test = false
