--- a/hermes/wasm/crates/wasi-component-adapter/Cargo.toml
+++ b/hermes/wasm/crates/wasi-component-adapter/Cargo.toml
@@ -7,6 +7,9 @@ edition.workspace = true
 license = "Apache-2.0 WITH LLVM-exception"
 publish = false
 
+[lints]
+workspace = true
+
 [dependencies]
 wasi = { workspace = true }
 wit-bindgen = { workspace = true, features = ["macros"] }
