--- a/hermes/wasm/crates/wasi-component-adapter/Cargo.toml
+++ b/hermes/wasm/crates/wasi-component-adapter/Cargo.toml
@@ -7,6 +7,12 @@ edition.workspace = true
 license = "Apache-2.0 WITH LLVM-exception"
 publish = false
 
+[lib]
+test = false
+bench = false
+crate-type = ["cdylib"]
+name = "wasi_snapshot_preview1"
+
 [lints]
 workspace = true
 
@@ -18,11 +24,6 @@ byte-array-literals = { workspace = true }
 [build-dependencies]
 wasm-encoder = { workspace = true }
 object = { workspace = true, features = ["archive"] }
-
-[lib]
-test = false
-crate-type = ["cdylib"]
-name = "wasi_snapshot_preview1"
 
 [features]
 default = ["reactor"]
