--- a/hermes/bin/Cargo.toml
+++ b/hermes/bin/Cargo.toml
@@ -8,3 +8,6 @@ authors.workspace = true
 edition.workspace = true
 license.workspace = true
 repository.workspace = true
+
+[lints]
+workspace = true
