--- a/hermes/wasm/deny.toml
+++ b/hermes/wasm/deny.toml
@@ -267,7 +267,11 @@ unknown-git = "deny"
 # if not specified. If it is specified but empty, no registries are allowed.
 allow-registry = ["https://github.com/rust-lang/crates.io-index"]
 # List of URLs for allowed Git repositories
-allow-git = ['https://github.com/input-output-hk/catalyst-pallas']
+allow-git = [
+    # Remove this once upstream changes are merged.
+    # issue: https://github.com/input-output-hk/hermes/issues/63
+    "https://github.com/input-output-hk/catalyst-pallas"
+]
 
 [sources.allow-org]
 # 1 or more github.com organizations to allow git sources for
