--- a/hermes/wasm/crates/byte-array-literals/Cargo.toml
+++ b/hermes/wasm/crates/byte-array-literals/Cargo.toml
@@ -3,8 +3,7 @@ name = "byte-array-literals"
 version.workspace = true
 authors.workspace = true
 edition.workspace = true
-# inherited license from https://github.com/bytecodealliance/wasmtime
-license = "Apache-2.0 WITH LLVM-exception"
+license.workspace = true
 publish = false
 
 [lints]
