--- a/.vscode/settings.recommended.json
+++ b/.vscode/settings.recommended.json
@@ -53,7 +53,8 @@
     "Earthfile": "earthfile"
   },
   "rust-analyzer.linkedProjects": [
-    "./hermes/bin/Cargo.toml"
+    "./hermes/Cargo.toml",
+    "./hermes/wasi-preview1-component-adapter/Cargo.toml"
   ],
   "rust-analyzer.check.overrideCommand": [
     "bash",
