--- a/hermes/wasi-preview1-component-adapter/Cargo.toml
+++ b/hermes/wasi-preview1-component-adapter/Cargo.toml
@@ -1,4 +1,4 @@
-#cspell: words Apisit Ritreungroj wasi bindgen
+#cspell: words Apisit Ritreungroj wasi bindgen cdylib
 
 [workspace]
 resolver = "2"
