--- a/hermes/Cargo.toml
+++ b/hermes/Cargo.toml
@@ -21,3 +21,5 @@ license = "MIT OR Apache-2.0"
 # issue: https://github.com/input-output-hk/hermes/issues/63
 pallas = { version = "0.21.0", git = "https://github.com/input-output-hk/catalyst-pallas.git", branch = "feat/hardano-read-blocks-iter-send" }
 pallas-hardano = { version = "0.21.0", git = "https://github.com/input-output-hk/catalyst-pallas.git", branch = "feat/hardano-read-blocks-iter-send" }
+
+wasmtime = "16.0.0"
