--- a/hermes/bin/Cargo.toml
+++ b/hermes/bin/Cargo.toml
@@ -13,4 +13,5 @@ repository.workspace = true
 workspace = true
 
 [dependencies]
+thiserror = { workspace = true }
 wasmtime = { workspace = true, features = ["component-model"] }
