--- a/hermes/deny.toml
+++ b/hermes/deny.toml
@@ -107,6 +107,7 @@ allow = [
     "MIT",
     "Apache-2.0",
     "Unicode-DFS-2016",
+    "BSD-2-Clause",
     "BSD-3-Clause",
     "BlueOak-1.0.0",
     "Apache-2.0 WITH LLVM-exception"
