--- a/wasm/wasi-hermes-component-adapter/deny.toml
+++ b/wasm/wasi-hermes-component-adapter/deny.toml
@@ -108,6 +108,7 @@ allow = [
     "Apache-2.0",
     "Unicode-DFS-2016",
     "BSD-3-Clause",
+    "BSD-2-Clause",
     "BlueOak-1.0.0",
     "Apache-2.0 WITH LLVM-exception"
 ]
