--- a/hermes/bin/Cargo.toml
+++ b/hermes/bin/Cargo.toml
@@ -9,6 +9,9 @@ edition.workspace = true
 license.workspace = true
 repository.workspace = true
 
+[[bin]]
+name = "hermes"
+
 [lints]
 workspace = true
 
