--- a/hermes/bin/Cargo.toml
+++ b/hermes/bin/Cargo.toml
@@ -14,3 +14,4 @@ workspace = true
 
 [dependencies]
 wasmtime = { workspace = true, features = ["component-model"] }
+rusty_ulid = { workspace = true }
