feat: Wasm module implementation  (#73)
* add a draft Module loader functionalit

* remove rust-toolchain cargo config value

* fix scoping

* update Error handling, update checks

* add Clone derive

* fix some lints

* update

* add engine docs

* add wasm module docs

* fix spell check

* fix deny failure

* update module

* wip

* update store management

* add more docs

* add Context struct, remove engine mod

* wip

* fix checks

* update Cargo.toml file

* fix build

* fix build

* Update hermes/bin/src/wasm/module.rs

Co-authored-by: Joaquín Rosales <casabenita7@gmail.com>

* fix suggestions

* add docs

* Update hermes/bin/src/main.rs

Co-authored-by: Steven Johnson <stevenj@users.noreply.github.com>

* cleanup

---------

Co-authored-by: Joaquín Rosales <casabenita7@gmail.com>
Co-authored-by: Steven Johnson <stevenj@users.noreply.github.com>

--- a/hermes/Cargo.toml
+++ b/hermes/Cargo.toml
@@ -11,7 +11,6 @@ version = "0.0.1"
 authors = [
     "Steven Johnson <steven.johnson@iohk.io>"
 ]
-rust-version = "1.73"
 homepage = "https://input-output-hk.github.io/hermes"
 repository = "https://github.com/input-output-hk/hermes"
 license = "MIT OR Apache-2.0"
@@ -55,3 +54,6 @@ missing_docs_in_private_items = "deny"
 # issue: https://github.com/input-output-hk/hermes/issues/63
 pallas = { version = "0.21.0", git = "https://github.com/input-output-hk/catalyst-pallas.git", branch = "feat/hardano-read-blocks-iter-send" }
 pallas-hardano = { version = "0.21.0", git = "https://github.com/input-output-hk/catalyst-pallas.git", branch = "feat/hardano-read-blocks-iter-send" }
+
+wasmtime = "17.0.0"
+rusty_ulid = "2.0.0"
