--- a/hermes/bin/Cargo.toml
+++ b/hermes/bin/Cargo.toml
@@ -11,3 +11,7 @@ repository.workspace = true
 
 [lints]
 workspace = true
+
+[dependencies]
+wasmtime = { workspace = true, features = ["component-model"] }
+rusty_ulid = { workspace = true }
