fix: config files

--- a/hermes/crates/cbork/.config/nextest.toml
+++ b/hermes/crates/cbork/.config/nextest.toml
@@ -1,4 +1,4 @@
-# cspell: words nextest scrollability testcase
+# cspell: words scrollability testcase
 [store]
 # The directory under the workspace root at which nextest-related files are
 # written. Profile-specific storage is currently written to dir/<profile-name>.
@@ -35,7 +35,7 @@ path = "junit.xml"
 # The name of the top-level "report" element in JUnit report. If aggregating
 # reports across different test runs, it may be useful to provide separate names
 # for each report.
-report-name = "cat-gateway"
+report-name = "nextest"
 
 # Whether standard output and standard error for passing tests should be stored in the JUnit report.
 # Output is stored in the <system-out> and <system-err> elements of the <testcase> element.
