--- a/hermes/crates/cbork/abnf-parser/Cargo.toml
+++ b/hermes/crates/cbork/abnf-parser/Cargo.toml
@@ -8,9 +8,11 @@ license = "MIT OR Apache-2.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lints]
+workspace = true
+
 [dependencies]
 derive_more =  "0.99.17"
 
 pest = { version = "2.7.2", features = ["std", "pretty-print", "memchr", "const_prec_climber"] }
 pest_derive = { version = "2.7.2", features = ["grammar-extras"] }
-
