--- a/hermes/crates/cbork/abnf-parser/Cargo.toml
+++ b/hermes/crates/cbork/abnf-parser/Cargo.toml
@@ -1,7 +1,7 @@
-#cspell: words memchr
+#cspell: words memchr abnf
 
 [package]
-name = "cddl-parser"
+name = "abnf-parser"
 version = "0.1.0"
 edition.workspace = true
 license = "MIT OR Apache-2.0"
