--- a/hermes/bin/Cargo.toml
+++ b/hermes/bin/Cargo.toml
@@ -16,3 +16,4 @@ workspace = true
 wasmtime = { workspace = true, features = ["component-model"] }
 rusty_ulid = { workspace = true }
 anyhow = { workspace = true }
+thiserror = { workspace = true }
