--- a/hermes/Cargo.toml
+++ b/hermes/Cargo.toml
@@ -56,5 +56,5 @@ pallas-hardano = { version = "0.22.0" }
 wasmtime = "17.0.0"
 rusty_ulid = "2.0.0"
 anyhow = "1.0.71"
-blake2 = "0.10.6"
+blake2b_simd = "1.0.2"
 hex-literal = "0.4.1"
