--- a/hermes/bin/Cargo.toml
+++ b/hermes/bin/Cargo.toml
@@ -16,4 +16,6 @@ workspace = true
 wasmtime = { workspace = true, features = ["component-model"] }
 rusty_ulid = { workspace = true }
 anyhow = { workspace = true }
+blake2b_simd = { workspace = true }  
+hex-literal = { workspace = true }  
 thiserror = { workspace = true }
