--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -15,6 +15,13 @@
         "rust-lang.rust-analyzer",
         "JScearcy.rust-doc-viewer",
         "serayuzgur.crates",
-        "panicbit.cargo",
+        "bierner.markdown-checkbox",
+        "bierner.markdown-emoji",
+        "bierner.markdown-footnotes",
+        "bierner.markdown-mermaid",
+        "bpruitt-goddard.mermaid-markdown-syntax-highlighting",
+        "bytecodealliance.wit-idl",
+        "foxundermoon.shell-format",
+        "dtsvet.vscode-wasm",
     ]
 }
