chore: add dashmap crate

--- a/hermes/bin/Cargo.toml
+++ b/hermes/bin/Cargo.toml
@@ -20,3 +20,4 @@ blake2b_simd = { workspace = true }
 hex-literal = { workspace = true }  
 thiserror = { workspace = true }
 ed25519-bip32 = { workspace = true }
+dashmap = { workspace = true }
