--- a/hermes/bin/Cargo.toml
+++ b/hermes/bin/Cargo.toml
@@ -29,3 +29,4 @@ hex-literal = { workspace = true }
 thiserror = { workspace = true }
 time = { workspace = true, features = ["local-offset", "macros", "parsing"] }
 time-tz = { workspace = true, features = ["system"] }
+libc = { workspace = true }
