--- a/hermes/Cargo.toml
+++ b/hermes/Cargo.toml
@@ -56,6 +56,7 @@ pallas-hardano = { version = "0.23.0" }
 wasmtime = "18.0.2"
 rusty_ulid = "2.0.0"
 anyhow = "1.0.71"
+dashmap = "5.5.3"
 blake2b_simd = "1.0.2"
 hex-literal = "0.4.1"
 thiserror = "1.0.56"
