--- a/hermes/bin/Cargo.toml
+++ b/hermes/bin/Cargo.toml
@@ -24,6 +24,7 @@ required-features = ["bench"]
 wasmtime = { workspace = true, features = ["component-model"] }
 rusty_ulid = { workspace = true }
 anyhow = { workspace = true }
+dashmap = { workspace = true }
 blake2b_simd = { workspace = true }  
 hex-literal = { workspace = true }  
 thiserror = { workspace = true }
