feat: add once_cell crate

--- a/hermes/bin/Cargo.toml
+++ b/hermes/bin/Cargo.toml
@@ -21,3 +21,4 @@ hex-literal = { workspace = true }
 thiserror = { workspace = true }
 ed25519-bip32 = { workspace = true }
 dashmap = { workspace = true }
+once_cell = { workspace = true }
