--- a/hermes/Cargo.toml
+++ b/hermes/Cargo.toml
@@ -56,9 +56,11 @@ pallas-hardano = { version = "0.23.0" }
 wasmtime = "18.0.2"
 rusty_ulid = "2.0.0"
 anyhow = "1.0.71"
-dashmap = "5.5.3"
 blake2b_simd = "1.0.2"
 hex-literal = "0.4.1"
 thiserror = "1.0.56"
 criterion = "0.5.1"
+dashmap = "5.5.3"
+once_cell = "1.19.0"
 time = "0.3.34"
+saffron = "0.1.0"
