refactor(cron): refactor state into its own module

--- a/hermes/bin/Cargo.toml
+++ b/hermes/bin/Cargo.toml
@@ -32,3 +32,4 @@ dashmap = { workspace = true }
 once_cell = { workspace = true }
 saffron = { workspace = true }
 time = { workspace = true }
+chrono = { workspace = true }
