chore(vscode): Add d2 extensions to vscode recommendations

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -23,5 +23,6 @@
         "bytecodealliance.wit-idl",
         "foxundermoon.shell-format",
         "dtsvet.vscode-wasm",
+        "terrastruct.d2",
     ]
 }
