--- a/hermes/schemas/example/hermes_app_metadata.json
+++ b/hermes/schemas/example/hermes_app_metadata.json
@@ -3,7 +3,7 @@
     "name": "Athena - Project Catalyst Voting",
     "icon": "/srv/www/icons/athena.svg",
     "version": "V2.7.3",
-    "description": "Project Catalyst Inovation Platform",
+    "description": "Project Catalyst Innovation Platform",
     "about": "About Project Catalyst, long form.\nMulti line.",
     "src": [
         "https://github.com/input-output-hk/hermes",
@@ -16,7 +16,7 @@
         {
             "spdx": "Apache-2.0",
             "file": "/srv/data/apache2.txt",
-            "note": "A note"
+            "note": "Both SPDX and File can be specified together.\nThis allows the text of the License to be shown in any admin UI."
         },
         {
             "spdx": "MIT",
@@ -24,11 +24,11 @@
         },
         {
             "spdx": "Apache-2.0",
-            "note": "A note"
+            "note": "Just defines the license by the SPDX ID."
         },
         {
             "file": "/srv/data/apache2.txt",
-            "note": "A note"
+            "note": "Just defines the license by the file path."
         }
     ],
     "build_date": 1709041814,
