fix cargo warning

--- a/hermes/crates/cardano-chain-follower/Cargo.toml
+++ b/hermes/crates/cardano-chain-follower/Cargo.toml
@@ -14,7 +14,7 @@ workspace = true
 pallas.workspace = true
 pallas-hardano.workspace = true
 thiserror.workspace = true
-tokio = { workspace = true, default-features = false, features = ["macros", "rt", "net", "rt-multi-thread"] }
+tokio = { workspace = true, features = ["macros", "rt", "net", "rt-multi-thread"] }
 tracing.workspace = true
 
 [dev-dependencies]
