--- a/hermes/bin/Cargo.toml
+++ b/hermes/bin/Cargo.toml
@@ -29,3 +29,4 @@ hex-literal = { workspace = true }
 thiserror = { workspace = true }
 criterion = { workspace = true, optional = true }
 time = { workspace = true }
+once_cell = { workspace = true }
