docs(hermes): Fix markdown and spelling checks

--- a/.markdownlint-cli2.jsonc
+++ b/.markdownlint-cli2.jsonc
@@ -10,7 +10,8 @@
   "ignores": [
     ".config/dictionaries/**",
     "**/target/**",
-    "hermes/wasm/*/**"
+    "hermes/wasm/*/**",
+    "**/.dart_tool/**"
   ],
   // Set standard config options in `/.markdownlint.jsonc`
   "config": {
