feat: add bip39 lib

--- a/hermes/bin/Cargo.toml
+++ b/hermes/bin/Cargo.toml
@@ -23,3 +23,4 @@ ed25519-bip32 = { workspace = true }
 dashmap = { workspace = true }
 once_cell = { workspace = true }
 time = { workspace = true }
+bip39 = { workspace = true }
