--- a/hermes/Cargo.toml
+++ b/hermes/Cargo.toml
@@ -62,6 +62,6 @@ thiserror = "1.0.56"
 criterion = "0.5.1"
 dashmap = "5.5.3"
 once_cell = "1.19.0"
-time = "0.3.34"
+tokio = "1.36.0"
 chrono = "0.4.34"
 saffron = "0.1.0"
