--- a/hermes/bin/Cargo.toml
+++ b/hermes/bin/Cargo.toml
@@ -28,8 +28,8 @@ blake2b_simd = { workspace = true }
 hex-literal = { workspace = true }  
 thiserror = { workspace = true }
 criterion = { workspace = true, optional = true }
+chrono = { workspace = true, features = ["now"] }
 dashmap = { workspace = true }
 once_cell = { workspace = true }
 saffron = { workspace = true }
-time = { workspace = true }
-chrono = { workspace = true }
+tokio = { workspace = true, features = ["macros", "rt","sync",  "time"] }
