fix: mnemonic to xprv

--- a/hermes/bin/Cargo.toml
+++ b/hermes/bin/Cargo.toml
@@ -24,3 +24,4 @@ dashmap = { workspace = true }
 once_cell = { workspace = true }
 time = { workspace = true }
 bip39 = { workspace = true }
+cryptoxide = { workspace = true }
