feat: add rand and rand_core lib

--- a/hermes/bin/Cargo.toml
+++ b/hermes/bin/Cargo.toml
@@ -25,3 +25,5 @@ once_cell = { workspace = true }
 time = { workspace = true }
 bip39 = { workspace = true }
 cryptoxide = { workspace = true }
+rand = { workspace = true }
+rand_core = { workspace = true }
