--- a/hermes/bin/Cargo.toml
+++ b/hermes/bin/Cargo.toml
@@ -31,6 +31,7 @@ criterion = { workspace = true, optional = true }
 time = { workspace = true }
 libtest-mimic = { workspace = true }
 crossbeam-queue = { workspace = true }
+once_cell = { workspace = true }
 
 [[test]]
 name = "wasm-component-integration-tests"
